2004-11-10  Pavel Tsekov  <ptsekov@gmx.net>

	* editdraw.c (edit_status): Don't output extra characters on the
	status line.
	(print_to_widget): Don't use addch() with negative offset to skip
	over excessive columns. Output only those columns that should be
	displayed on the screen.

2004-11-10  Roland Illig  <roland.illig@gmx.de>

	* editcmd.c (edit_replace_prompt): Fixed codepage conversion bug
	introduced in on 2004-09-25 by me.

2004-10-23  Roland Illig  <roland.illig@gmx.de>

	* editdraw.c (edit_status): Expand the filename field in the status
	line to 16 characters even if the actual filename is shorter.

2004-10-16  Roland Illig  <roland.illig@gmx.de>

	* syntax.c (read_one_line): Fixed SEGV when reading syntax file
	with "\r\n" line endings on Unix.

2004-10-11  Leonard den Ottolander  <leonard * den ottolander nl>

	* editcmd.c (regexp_error): Small text fix. 
	  (edit_search_cmd): Likewise.

2004-09-26  Roland Illig  <roland.illig@gmx.de>

	* editcmd.c (edit_ext_cmd): Revoked my last change.

2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* editcmd.c (edit_ext_cmd): Replaced the old version with a new
	one that uses ../src/pipethrough. The new version feeds the
	currently selected block (or an empty input) into the command
	which reduces the chance of a deadlock when the command tried
	to read from stdin. It also allows the user to insert the output
	of a command that has exited with a nonzero result. Another
	feature is that it does not use temporary files.

2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* syntax.c (this_try_alloc_color_pair): Added const qualifiers.
	* editcmd.c (snprintf_p): Likewise. (edit_replace_prompt):
	Simplified the code.

2004-09-25  Pavel S. Shirshov <pavelsh@mail.ru>

	* edit.c (edit_clean): g_free handles NULL argument too, 
	no need for the comparison.
	    (edit_move_backward_lots): Likewise.
	* editcmd.c (edit_set_filename): Likewise.
	    (edit_replace_cmd): Likewise.
	    (edit_search_cmd): Likewise.